--- a/nextJS_project/promptopia/.env
+++ b/nextJS_project/promptopia/.env
@@ -1,6 +1,6 @@
 GOOGLE_ID=113614008670-km5u2ufr64mo3a41na5opullllnukj5e.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-MONGODB_URI=mongodb://root:*****@localhost:27017/?authMechanism=DEFAULT
+MONGODB_URI=mongodb://root:123456@localhost:27017/?authMechanism=DEFAULT
 
 NEXTAUTH_URL=http://xrw.com:3000
 NEXTAUTH_URL_INTERNAL=http://xrw.com:3000
