--- a/nextJS_project/payment/package.json
+++ b/nextJS_project/payment/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "next": "13.4.12",
