--- a/web3/contractor_project_1/package.json
+++ b/web3/contractor_project_1/package.json
@@ -6,8 +6,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./src/tests"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ganache": "^7.9.0",
+    "mocha": "^10.2.0",
+    "solc": "^0.4.17",
+    "web3": "^4.0.3"
+  }
 }
